@@ -2,3 +2,4 @@ toooting愉快！此版本包括以下改进和修复：
 - 改进过滤体验，与v4.0以上版本一致
 - 支持查看用户的头像和横幅图片
 - 修复iPad部分尺寸问题（非优化）
+- 试验性（！）支持Pleroma
